force-app/main/default/objects/DiscardAnnullmentRule__c/DiscardAnnullmentRule__c.object-meta.xml
<CustomObject>
    <description>Tabella di configurazione per l&apos;annullamento automatico degli scarti</description>
    <label>Regola Annullamento Scarto</label>
    <nameField>
        <displayFormat>DAR-{0000}</displayFormat>
        <label>Regola Annullamento Scarto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regola Annullamento Scarto</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>