force-app/main/default/objects/DiscardAnnullmentRule__c/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <description>Tipo di attività che dovrebbe crearsi in alternativa all&apos;annullamento</description>
    <label>Tipo attività</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProcessValue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esito KO da DL</fullName>
            </value>
            <value>
                <fullName>Esito KO da SAP</fullName>
            </value>
            <value>
                <fullName>Esito KO pre-MDM</fullName>
            </value>
            <value>
                <fullName>Annullamento SII</fullName>
            </value>
            <value>
                <fullName>Ammissibilità KO</fullName>
            </value>
        </valueSetDefinition>
        <!--valueSettings>
            <controllingFieldValue>Switch in Ele</controllingFieldValue>
            <controllingFieldValue>Switch in Gas</controllingFieldValue>
            <controllingFieldValue>Voltura</controllingFieldValue>
            <controllingFieldValue>Risoluzione Punto Sospeso</controllingFieldValue>
            <valueName>Annullamento SII</valueName>
        </valueSettings-->
    </valueSet>
</CustomField>