force-app/main/default/objects/DiscardAnnullmentRule__c/fields/ControllingCommodity__c.field-meta.xml
<CustomField>
    <fullName>ControllingCommodity__c</fullName>
    <label>Servizio Controllante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energia Elettrica</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Acqua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>