force-app/main/default/objects/DiscardAnnullmentRule__c/fields/ControllingField__c.field-meta.xml
<CustomField>
    <fullName>ControllingField__c</fullName>
    <description>Recupero dei dati in corso. Attendere alcuni secondi e riprovare a tagliare o copiare.</description>
    <label>Campo controllante</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ParentObject__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DiscardDescription__c</fullName>
            </value>
            <value>
                <fullName>DiscardReason__c</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
                <isActive>false</isActive>
                <label>Description</label>
            </value>
            <value>
                <fullName>DiscardReason__c​</fullName>
                <isActive>false</isActive>
                <label>DiscardReason__c​</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>