force-app/main/default/objects/DiscardAnnullmentRule__c/fields/ControllingValue__c.field-meta.xml
<CustomField>
    <fullName>ControllingValue__c</fullName>
    <description>Valore da utilizzare per il controllo sulla causale di annullamento</description>
    <label>Valore controllante</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>