force-app/main/default/objects/DiscardAnnullmentRule__c/fields/DiscardNoteReliability__c.field-meta.xml
<CustomField>
    <fullName>DiscardNoteReliability__c</fullName>
    <label>Affidabilità Nota Scarto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bassa</fullName>
                <default>true</default>
                <label>Bassa</label>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>