force-app/main/default/objects/DiscardAnnullmentRule__c/fields/DiscardReason__c.field-meta.xml
<CustomField>
    <fullName>DiscardReason__c</fullName>
    <label>Motivazione dello scarto</label>
    <type>TextArea</type>
</CustomField>