force-app/main/default/objects/DiscardAnnullmentRule__c/fields/ProcessField__c.field-meta.xml
<CustomField>
    <fullName>ProcessField__c</fullName>
    <description>Campo dell&apos;oggetto padre da utilizzare per il controllo sul processo/cluster di appartenenza</description>
    <label>Campo processo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ParentObject__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ProcessType__c</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>