force-app/main/default/objects/DiscardAnnullmentRule__c/fields/ProcessValue__c.field-meta.xml
<CustomField>
    <fullName>ProcessValue__c</fullName>
    <description>Valore da utilizzare per il controllo sul processo/cluster di appartenenza</description>
    <label>Valore processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sospensione Fornitura</fullName>
            </value>
            <value>
                <fullName>Riattivazione Fornitura</fullName>
            </value>
            <value>
                <fullName>Variazione Potenza</fullName>
            </value>
            <value>
                <fullName>Interruzione Fornitura</fullName>
            </value>
            <value>
                <fullName>Chiusura Contatore</fullName>
            </value>
            <value>
                <fullName>Modifica Impianto</fullName>
            </value>
            <value>
                <fullName>Risoluzione No Disalimentabile</fullName>
            </value>
            <value>
                <fullName>Spostamento Contatore</fullName>
            </value>
            <value>
                <fullName>Risoluzione No Sospensione</fullName>
            </value>
            <value>
                <fullName>Verifica GDM</fullName>
            </value>
            <value>
                <fullName>Rimozione Impianto</fullName>
            </value>
            <value>
                <fullName>Cambio Offerta Gas</fullName>
            </value>
            <value>
                <fullName>Cambio Offerta Ele</fullName>
            </value>
            <value>
                <fullName>Consegna copia chiave GdM</fullName>
            </value>
            <value>
                <fullName>Nuovo Impianto</fullName>
            </value>
            <value>
                <fullName>Richiesta lettura cliente</fullName>
            </value>
            <value>
                <fullName>Recesso per Altri Motivi</fullName>
            </value>
            <value>
                <fullName>Voltura</fullName>
            </value>
            <value>
                <fullName>Connessione con Attivazione</fullName>
            </value>
            <value>
                <fullName>Proroga Temporanea</fullName>
            </value>
            <value>
                <fullName>Riattivazione Fornitura non morosa</fullName>
            </value>
            <value>
                <fullName>Subentro Gas</fullName>
            </value>
            <value>
                <fullName>Prima Attivazione Ele</fullName>
            </value>
            <value>
                <fullName>Temporanea - Nuova Attivazione</fullName>
            </value>
            <value>
                <fullName>Risoluzione Punto Sospeso</fullName>
            </value>
            <value>
                <fullName>Autolettura da cliente</fullName>
            </value>
            <value>
                <fullName>Switch in Gas</fullName>
            </value>
            <value>
                <fullName>Subentro Ele</fullName>
            </value>
            <value>
                <fullName>Prima Attivazione In delibera</fullName>
            </value>
            <value>
                <fullName>Prima Attivazione Fuori delibera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>