force-app/main/default/objects/DiscardAnnullmentRule__c/recordTypes/HDT_RT_Automatic.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Automatic</fullName>
    <active>true</active>
    <label>Automatico</label>
</RecordType>