force-app/main/default/objects/DiscardAnnullmentRule__c/recordTypes/HDT_RT_NotAutomatic.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_NotAutomatic</fullName>
    <active>true</active>
    <label>Non Automatico</label>
</RecordType>