force-app/main/default/objects/DiscardAnnullmentRule__c/validationRules/HDT_VR_RequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_RequiredFields</fullName>
    <active>true</active>
    <description>Campo Valore Controllante</description>
    <errorConditionFormula>ISBLANK(ControllingValue__c)</errorConditionFormula>
    <errorMessage>Attenzione! Il campo Valore Controllante deve essere entrambi popolati.</errorMessage>
</ValidationRule>