force-app/main/default/objects/DiscardAnnullmentRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ActivityType__c</columns>
    <columns>ProcessValue__c</columns>
    <columns>ControllingValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>